# Deep_Learning_Project

./: .gitignore  CMakeLists.txt
Operators/include/: conv.h  dense.h  flatten.h  max_pool.h  relu.h  softmax.h
Operators/src/: conv.cpp  dense.cpp  flatten.cpp  max_pool.cpp  relu.cpp  softmax.cpp
Test_Operators/include/: conv_test.h  relu_test.h
Test_Operators/src/: conv_test.cpp  main_test.cpp  relu_test.cpp
config/: model_config.json  test_model_config.json
src/: main.cpp
utilities/include/: file_utils.h
utilities/src/: file_utils.cpp
